--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body{
   height: 100vh;
   background:url('ben-griffiths-2t-InoWsItg-unsplash.jpg') no-repeat center center/cover;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 5vh;
 }
 .panel{
   height: 80%;
@@ -95,4 +97,57 @@ body{
   cursor: pointer;
   background-color: transparent;
   border: 5px solid white;
+}
+button{
+  background-color: black;
+  color: #0df814;
+  font-size: 5vh;
+  font-weight: 5vw;
+  padding: 7px;
+  border: 2px solid #0c4002;
+  border-radius: 10px;
+  transition: 0.5s all ease-in-out;
+}
+button:hover{
+  cursor: pointer;
+  background-color: #0df814;
+  color: black;
+}
+.Score-manager{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 5vw;
+}
+.right-hit{
+  display: flex;
+  justify-content: center;
+  align-items: cneter;
+  color: white;
+  background-color: green;
+  padding: 1vw;
+  border-radius: 10px;
+  gap: 1vw;
+  transition: 0.5s all ease-in-out;
+}
+.wrong-hit{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: red;
+  padding: 1vw;
+  border-radius: 10px;
+  gap: 1vw;
+  transition: 0.5s all ease-in-out;
+}
+.right-hit:hover{
+  cursor: pointer;
+  background-color: transparent;
+  color: green;
+}
+.wrong-hit:hover{
+  cursor: pointer;
+  background-color: transparent;
+  color:#f50000;
 }
